2005-09-16  David Moore  <dcm@acm.org>

	* iptc/main.c: print dataset numbers of duplicate tags

2005-09-15  David Moore  <dcm@acm.org>

	* docs/reference: Documentation updates

2005-09-14  David Moore  <dcm@acm.org>

	* configure.in, iptc/main.c: Mac OS X compile fixes for libiconv

2005-09-10  David Moore  <dcm@acm.org>

	* iptc-data.[ch]: added new functions iptc_data_set_version(),
	iptc_data_add_dataset_with_value(), and
	iptc_data_add_dataset_with_contents().
	* iptc/main.c: removed -s option, instead sorting the datasets
	by default unless the --no-sort option is specified
	* iptc/main.c: call iptc_data_set_version() before saving

2005-09-07  David Moore  <dcm@acm.org>

	* iptc-data.h: compile fix
	* NEWS, configure.in: updated for release 0.2.0
	* docs/reference: documentation updates

2005-09-06  David Moore  <dcm@acm.org>

	* iptc/main.c: -m option will add dataset if not present

2005-08-29  David Moore  <dcm@acm.org>

	* iptc/main.c: allow running on multiple files at once

2005-08-28  David Moore  <dcm@acm.org>

	* iptc-dataset.[ch]: added new function iptc_dataset_copy()
	* iptc/main.c: preserve file permissions when saving
	* iptc/main.c: added character set conversion depending on locale
	* iptc/main.c, iptc/i18n.h: marked up sources for translation
	* docs/reference: documentation updates
	* configure.in, iptc/main.c: Mac OS X compile fixes

2005-08-27  David Moore  <dcm@acm.org>

	* various files: removed included libintl, added po/ directory for the
	iptc utility, eliminated autopoint from build scripts

2005-08-25  David Moore  <dcm@acm.org>

	* iptc-data.c, iptc-data.h: added iptc_data_get_encoding() and
	iptc_data_set_encoding_utf8() functions.
	* iptc/main.c: character encoding is saved when strings added

2005-08-23  David Moore  <dcm@acm.org>

	* iptc/main.c: added -l and -L arguments to list tag names
	* iptc-data.c, iptc-data.h: added iptc_data_sort() function
	* iptc/main.c: added -s argument to sort datasets
